app/javascript/style/video/_layout.scss
@use "../utils/breakpoints" as *;

body#videos__show {
  /**
  Put any main responsive layout code for ONLY desktop here... this does not count elements that scale to their
  surroundings
   */
  @include desktop() {
    .content-area {
      flex-direction: row;
      display: flex;
      justify-content: flex-end;

      .content-area__primary {
        flex: 1;
        overflow: scroll;

        &::-webkit-scrollbar {
          display: none;
        }

        height: 100%;
        max-width: 1280px;
        margin-left: 1vw;
      }

      > div {
        border-radius: 0.75rem;
      }

      .content-area__secondary {
        margin: 0 1vw 0 1vw;
        background: white;
        max-width: 20vw;
        display: flex;
        flex-direction: column;
      }

      canvas.pip-secondary-canvas {
        display: none;
      }
    }
  }

  /**
    This is the primary Video layout for portrait mobile views
     */
  @include mobilePortrait() {
    #layout-container {
      height: -webkit-fill-available;
    }

    .content-area {
      flex-direction: column;
      align-items: center;
    }

    .content-area__primary,
    .primary-video-area,
    .content-area__secondary {
      width: 95vw;
    }
    canvas.fixed-secondary-canvas {
      // We don't want to show the fixed canvas when we are in a small view
      display: none;
    }
    // Most of the code for PIP is inside of a separate file

    .pip-component canvas {
      width: 25vw;
    }

    .content-area__secondary {
      display: flex;
      height: 100%;

      .chat-section {
        height: --webkit-fill-available;
      }
    }
  }

  @include mobileLandscape() {
    width: 100vw;

    .content-area {
      flex-direction: row;
      display: flex;
      justify-content: flex-end;
    }

    .content-area,
    #layout-container {
      height: -webkit-fill-available;
      width: 100vw;
    }

    .content-area__primary {
      padding-left: env(safe-area-inset-left);
      flex: 1;

      .primary-video-area,
      canvas {
        height: -webkit-fill-available;
      }
    }

    .content-area__secondary {
      padding: env(safe-area-inset-top) calc(env(safe-area-inset-right) * 0.75)
        0 1vw;
      background: white;
      max-width: 20vw;
      display: flex;
      flex-direction: column;
    }

    .top-navbar,
    .primary-video__header {
      display: none;
    }

    .message-display {
      font-size: 0.75rem;
    }

    .streamer-profile {
      display: none;
    }

    canvas.pip-secondary-canvas {
      display: none;
    }
  }
}

